Changes Edit Product

--- a/AppBanwao.KaryKart.Web/AppBanwao.KaryKart.Web/Web.config
+++ b/AppBanwao.KaryKart.Web/AppBanwao.KaryKart.Web/Web.config
@@ -14,9 +14,9 @@
     <!--Dev DB-->
     <!--<add name="karrykartEntities" connectionString="metadata=res://*/KarryKart.csdl|res://*/KarryKart.ssdl|res://*/KarryKart.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ABHIYULT-PC;initial catalog=Karrykart;persist security info=True;user id=sa;password=Abhi123#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="KarrykartEntities" connectionString="metadata=res://*/Karrykart.csdl|res://*/Karrykart.ssdl|res://*/Karrykart.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Karrykart;persist security info=True;user id=sa;password=Abhi123#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="karrykartEntities" connectionString="metadata=res://*/karrykart.csdl|res://*/karrykart.ssdl|res://*/karrykart.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Karrykart;persist security info=True;user id=sa;password=Abhi123#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="karrykartEntities" connectionString="metadata=res://*/karrykart.csdl|res://*/karrykart.ssdl|res://*/karrykart.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Karrykart;persist security info=True;user id=sa;password=Abhi123#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--Test DB-->
-    <add name="karrykartEntities" connectionString="metadata=res://*/KarryKart.csdl|res://*/KarryKart.ssdl|res://*/KarryKart.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.235.105.13;initial catalog=Karrykart_Test;persist security info=True;user id=karrykartadmin;password=Karrykart123#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="karrykartEntities" connectionString="metadata=res://*/KarryKart.csdl|res://*/KarryKart.ssdl|res://*/KarryKart.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.235.105.13;initial catalog=Karrykart_Test;persist security info=True;user id=karrykartadmin;password=Karrykart123#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -34,8 +34,8 @@
     <add key="ContactEmail" value="info@karrykart.com" />
     <add key="AdminUser" value="admin@karrykart.com" />
     <add key="Password" value="Karrykart1234#" />
-    <!--<add key="APIMainURL" value="http://localhost:13518/api/" />-->
-    <add key="APIMainURL" value="http://testapi.karrykart.com/api/" />
+    <add key="APIMainURL" value="http://localhost:13518/api/" />
+    <!--<add key="APIMainURL" value="http://testapi.karrykart.com/api/" />-->
     
   </appSettings>
   <system.web>
