--- a/AppBanwao.KaryKart.Web/AppBanwao.KaryKart.Web/AppBanwao.KaryKart.Web.csproj
+++ b/AppBanwao.KaryKart.Web/AppBanwao.KaryKart.Web/AppBanwao.KaryKart.Web.csproj
@@ -3318,6 +3318,7 @@
     <Content Include="Scripts\kendo\2017.1.118\cultures\kendo.culture.af-ZA.min.js.map" />
     <Content Include="Scripts\kendo\2017.1.118\cultures\kendo.culture.af.min.js.map" />
     <Content Include="Views\Product\Edit.cshtml" />
+    <Content Include="Views\Category\EditSubCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\Product\" />
